# Graph

./: .gitignore  CMakeLists.txt  README.md
data/precomputed/: v8-d3-allConditions-byEdges.txt  v8-d4-allConditions-byEdges.txt  v8-d5-allConditions-byEdges.txt
data/results/: v5-d4-detailedStats.csv  v5-d4-resultsFormula.csv  v7-d3-resultsFormula.csv  v8-d4-detailedStats.csv  v8-d4-resultsFormula.csv
graph/: CMakeLists.txt  graphic.txt  results.txt  results_2.txt  results_regular_graph.txt
graph/data/results/: v7-d3-detailedStats.csv  v8-d3-detailedStats.csv  v8-d3-resultsFormula.csv
graph/include/: abstract_generator.hpp  brute_force.hpp  cycle.hpp  graph_diam.hpp  graph_settings.hpp  random_generator.hpp
graph/scripts/: G_v8_d3_deg3.txt  drawgraph.py  max.py  new.py  rb.py
graph/src/graph_properties/: art_points_and_bridges.cpp  cycle.cpp  graph_diam.cpp  graph_settings.cpp  is_graph_connected.cpp
graph/src/research/: alg.cpp  brute_force.cpp  random_generator.cpp
include/: abstract_generator.hpp  art_points_and_bridges.hpp  cycle.hpp  graph_diam.hpp  graph_settings.hpp  is_graph_connected.hpp  process_subgraphs.hpp  random_generator.hpp
scripts/: G_v8_d3_deg3.txt  G_v8_d3_deg4.txt  G_v8_d4_deg4.txt  analysis.py  analysis_results.csv  avg.py  diametr_cycle.py  drawgraph.py  edges.txt  output_results.txt  rb.py  task1.py  task2.py
src/algorithms/: brute_force.cpp  brute_force_core.cpp  brute_force_output.cpp  process_subgraphs.cpp  random_core.cpp  random_generator.cpp  random_output.cpp
src/graph_properties/: cycle.cpp  graph_diam.cpp  graph_settings.cpp  is_graph_connected.cpp
src/research/: alg.cpp  diam_add_edge_in_cycle.cpp  test.cpp  united.cpp
tests/: 1.cpp
